adding warning message

--- a/subscribe-to-text.html
+++ b/subscribe-to-text.html
@@ -1,12 +1,13 @@
 <html>
-  <head> 
+  <head>
     <style>
       .container {
         display: flex;
         align-items: center;
         flex-direction: column;
       }
-      .subscribe {
+      .subscribe,
+      .warning {
         font-size: 24px;
         font-weight: 600;
         display: flex;
@@ -16,14 +17,17 @@
   </head>
   <body>
     <div class="container">
-    <p class="subscribe">Subscribe to Impact Youth text messages</p>
-    <canvas id="qr"></canvas>
-    <script type="module">
-      import qrcode from 'https://cdn.jsdelivr.net/npm/qrcode@1.5.4/+esm'
+      <p class="subscribe">Subscribe to Impact Youth text messages</p>
+      <canvas id="qr"></canvas>
+      <script type="module">
+        import qrcode from "https://cdn.jsdelivr.net/npm/qrcode@1.5.4/+esm";
 
-      const payload = "SMSTO:+15102882020:Subscribe";
-      qrcode.toCanvas(document.getElementById("qr"), payload, { width: 500 });
-    </script>
+        const payload = "SMSTO:+15102882020:Subscribe";
+        qrcode.toCanvas(document.getElementById("qr"), payload, { width: 500 });
+      </script>
+      <div class="warning">
+        If not working text "SUBSCRIBE" to (510) 288-2020
+      </div>
     </div>
   </body>
 </html>
